# kag

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: demo-placeholder.md  demo.cast
src/kag/: cli.py  config.py  kaggle_api.py  notes_fetcher.py  project.py  tui.py
src/kag/screens/: competition_list.py  confirm_download.py  editor_select.py
tests/: conftest.py  test_competition_list_screen.py  test_kaggle_api.py  test_project.py
