[project]
name = "kag"
version = "0.1.0"
description = "Kaggle competition bootstrapper TUI - get right into the data"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Andrew Girgis" },
]
keywords = ["kaggle", "cli", "tui", "textual", "data-science"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "beautifulsoup4>=4.13.0",
    "markdownify>=1.2.0",
    "requests>=2.32.0",
    "rich>=15.0.0",
    "textual>=8.2.3",
]

[project.scripts]
kag = "kag.cli:main"

[project.urls]
Homepage = "https://github.com/Andrew-Girgis/kag"
Repository = "https://github.com/Andrew-Girgis/kag"
Issues = "https://github.com/Andrew-Girgis/kag/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
